# DomeControl

./: .gitignore  README.md
ascom/ASCOM.Altair.Dome/: ASCOM.Altair.Dome.csproj  ASCOM.Altair.Dome.sln  Altair Dome Setup.iss  Altair Dome Test.js  Commands.cs  Definitions.cs  Driver.cs  Responses.cs  SetupDialogForm.cs  SetupDialogForm.designer.cs
ascom/ASCOM.Altair.Dome/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
ascom/DomeTest/: DomeTest.csproj  Form1.Designer.cs  Form1.cs  Program.cs  app.config
ascom/DomeTest/Properties/: Resources.Designer.cs  Settings.Designer.cs
firmware/: CMakeLists.txt  run.bat
firmware/source/: definitions.h  main.c
firmware/source/buttons/: buttons.c  buttons.h
firmware/source/common/: definitions.c  definitions.h  utils.c  utils.h
firmware/source/encoder/: encoder.c  encoder.h
firmware/source/led/: led.c  led.h
firmware/source/limits/: limits.c  limits.h
firmware/source/motor/: motor.c  motor.h
firmware/source/settings/: settings.c  settings.h
firmware/source/usart/: usart.c  usart.h
